--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -77,7 +77,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/crime_solved_label"
+        app:layout_constraintBottom_toTopOf="@+id/crime_suspect"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/crime_date" />
 
@@ -85,13 +87,12 @@
         android:id="@+id/crime_requires_police"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/crime_requires_police"
+        app:layout_constraintBottom_toTopOf="@+id/crime_report"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/crime_solved"
         app:layout_constraintTop_toBottomOf="@+id/crime_date" />
 
     <Button
@@ -104,15 +105,26 @@
         android:text="@string/crime_suspect_text"
         app:layout_constraintEnd_toStartOf="@+id/crime_report"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crime_solved" />
+        app:layout_constraintTop_toBottomOf="@+id/imageButtonCall" />
 
     <Button
         android:id="@+id/crime_report"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="@string/crime_report_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crime_requires_police" />
+        app:layout_constraintTop_toTopOf="@+id/crime_suspect" />
+
+    <ImageButton
+        android:id="@+id/imageButtonCall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:src="@android:drawable/stat_sys_phone_call"
+        app:layout_constraintEnd_toStartOf="@+id/crime_requires_police"
+        app:layout_constraintStart_toEndOf="@+id/crime_solved"
+        app:layout_constraintTop_toBottomOf="@+id/crime_date" />
 </android.support.constraint.ConstraintLayout>
