--- a/app/src/main/res/layout/fragment_big_image.xml
+++ b/app/src/main/res/layout/fragment_big_image.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
+        android:contentDescription="@string/crime_full_image"
         android:src="@android:color/background_dark" />
 
 </FrameLayout>
