--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -16,8 +16,10 @@
         android:layout_marginTop="16dp"
         android:background="@android:color/darker_gray"
         android:cropToPadding="true"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
+        android:contentDescription="@string/crime_photo_no_image_description"
         android:src="@android:drawable/btn_dialog"
+        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,13 +29,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:src="@android:drawable/ic_menu_camera"
+        android:contentDescription="@string/crime_photo_button_description"
         app:layout_constraintEnd_toEndOf="@+id/crime_photo"
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="@+id/crime_photo"
         app:layout_constraintTop_toBottomOf="@+id/crime_photo" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/crime_title_label"
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -41,12 +44,13 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/crime_title_label"
+        android:labelFor="@+id/crime_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/crime_photo"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/crime_title"
+        android:id="@id/crime_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -56,8 +60,8 @@
         android:inputType=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="@+id/crime_title_label"
+        app:layout_constraintTop_toBottomOf="@+id/crime_title_label"
         tools:targetApi="o" />
 
     <TextView
@@ -82,7 +86,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toStartOf="@+id/crime_time"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/label_date" />
 
     <Button
         android:id="@+id/crime_time"
@@ -90,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/label_time" />
 
 
     <CheckBox
@@ -101,6 +105,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/crime_solved_label"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/crime_suspect"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/crime_date" />
@@ -111,20 +116,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:contentDescription="@string/crime_call_suspect"
         android:src="@android:drawable/stat_sys_phone_call"
-        app:layout_constraintEnd_toStartOf="@+id/crime_requires_police"
         app:layout_constraintStart_toEndOf="@+id/crime_solved"
         app:layout_constraintTop_toBottomOf="@+id/crime_date" />
 
     <CheckBox
         android:id="@+id/crime_requires_police"
-        android:layout_width="wrap_content"
+        android:layout_width="105dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:text="@string/crime_requires_police"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/crime_report"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/crime_date" />
@@ -133,11 +138,9 @@
         android:id="@+id/crime_suspect"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
         android:text="@string/crime_suspect_text"
-        app:layout_constraintEnd_toStartOf="@+id/crime_report"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButtonCall" />
 
@@ -145,9 +148,43 @@
         android:id="@+id/crime_report"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/crime_report_text"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/crime_suspect"
         app:layout_constraintTop_toTopOf="@+id/crime_suspect" />
+
+    <TextView
+        android:id="@+id/label_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/txt_label_date"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/label_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/txt_label_time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/label_call"
+        android:layout_width="66dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/txt_label_call"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButtonCall"
+        app:layout_constraintEnd_toStartOf="@+id/crime_requires_police"
+        app:layout_constraintStart_toEndOf="@+id/imageButtonCall"
+        app:layout_constraintTop_toTopOf="@+id/imageButtonCall" />
 
 </android.support.constraint.ConstraintLayout>
