--- a/app/src/main/res/layout/list_item_crime_1.xml
+++ b/app/src/main/res/layout/list_item_crime_1.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
